[macOS] Do not crash if there is an attempt to copy a file URL to the clipboard https://bugs.webkit.org/show_bug.cgi?id=187183

Patch by Aditya Keerthi <akeerthi@apple.com> on 2018-06-29
Reviewed by Wenson Hsieh.

Source/WebKit:

r210683 introduced logic to prevent file URLs from being copied to the clipboard
in unexpected cases. The current logic always crashes the WebProcess if
webProcessProxy->checkURLReceivedFromWebProcess returns false. Instead of
crashing, we can fail silently and not copy anything to the clipboard.

* UIProcess/Cocoa/WebPasteboardProxyCocoa.mm:
(WebKit::WebPasteboardProxy::setPasteboardPathnamesForType): Removed call to markCurrentlyDispatchedMessageAsInvalid() which was causing the process to crash.

Tools:

Added a 'runSingly' option to the TestOptions struct. Setting this option to true
will force a new PlatformWebView to be created before running a test. This ensures
that any state set by previous tests are not preserved.

One example of the importance of having this ability is in the case where we want
to test functionality that deals with read access to files. If a test were to
load a valid file URL, universal read access will be granted in WebProcessProxy.
This prevents us from testing cases that rely on us not have universal read
access. Now, if we write the test using the 'runSingly' option, any state set
by previous tests is cleared. Consequently, our test will behave as expected.

* WebKitTestRunner/PlatformWebView.h:
(WTR::PlatformWebView::viewSupportsOptions const):
* WebKitTestRunner/TestController.cpp:
(WTR::updateTestOptionsFromTestHeader):
* WebKitTestRunner/TestOptions.h:
(WTR::TestOptions::hasSameInitializationOptions const):

LayoutTests:

Added a test to ensure that the WebProcess does not crash if we attempt to copy a
file URL to the clipboard. The test also ensures the clipboard content remains
unchanged.

* TestExpectations:
* http/tests/security/pasteboard-file-url-expected.txt: Added.
* http/tests/security/pasteboard-file-url.html: Added.
* platform/mac-wk2/TestExpectations:

Canonical link: https://commits.webkit.org/202464@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233379 268f45cc-cd09-0410-ab3c-d52691b4dbfc